<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".View.Login.RegisterActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_below="@+id/circle5"
        android:src="@drawable/store"
        android:layout_marginTop="-30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-105dp"
        android:layout_marginBottom="50dp"
        android:rotation="90"
        android:src="@drawable/circle" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/string_logo"
        android:textColor="@color/colorOrangred"
        android:textSize="40sp"
        android:textStyle="bold" />

    //Input text
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipEmail"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtLogo"
        android:background="@color/colorWhite"
        android:layout_width="330dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_height="60dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailRegister"
            android:fontFamily="@font/calibri"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="19sp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="5dp"
            android:hint="@string/string_email"/>
        "></com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPass"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tipEmail"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhite"
        android:layout_width="330dp"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="19sp"
            android:fontFamily="@font/calibri"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/string_password"/>
        ></com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipConfirmPass"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tipPass"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhite"
        android:layout_width="330dp"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCofirmPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="19sp"
            android:fontFamily="@font/calibri"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/string_confirm_the_password"/>
        ></com.google.android.material.textfield.TextInputLayout>
    //..

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="-40dp"
        android:rotation="125"
        android:src="@drawable/circle" />
    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-50dp"
        android:layout_marginBottom="-20dp"
        android:rotation="90"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circle5"
        android:layout_width="550dp"
        android:layout_height="550dp"
        android:layout_marginTop="-433dp"
        android:layout_marginLeft="-30dp"
        android:rotation="270"
        android:src="@drawable/circle" />
    <ImageView
        android:id="@+id/circle4"
        android:layout_width="500dp"
        android:layout_height="550dp"
        android:layout_marginTop="-440dp"
        android:layout_marginRight="-40dp"
        android:rotation="90"
        android:src="@drawable/circle" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_weight="1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/string_register"
        android:layout_below="@+id/tipConfirmPass"
        android:background="@color/colorOrangred"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/txtRegisterBack"
        android:text="@string/string_back_login"
        android:textSize="20sp"
        android:fontFamily="@font/calibri"
        android:textColor="@color/colorOrangred"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>