<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/store" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/string_logo"
        android:textColor="@color/colorOrangred"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/calibri"
        android:text="@string/string_introduce"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIntroduce"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Version 0.0"
        android:textStyle="bold"
        android:textColor="@color/colorOrangred"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp" />

    <TextView
        android:id="@+id/txtLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="5dp"
        android:text="@string/string_loading"
        android:textColor="@color/colorOrangred"
        android:textSize="20sp" />

</RelativeLayout>