<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.WareHouseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/iclWareHouse"
            layout="@layout/layout_ware_house" />
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardUnit"
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_horizontal_margin_16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin_8dp">

                    <EditText
                        android:id="@+id/edtUnitCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_unit_count"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin_8dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_8dp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_8dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edtMass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/string_mass"
                            android:textSize="17sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinerWare"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_8dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin_16dp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_8dp"
                        android:layout_weight="1"
                        android:hint="@string/string_unit" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardInventory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cardUnit"
            android:layout_marginTop="@dimen/activity_horizontal_margin_16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin_8dp"
                    android:text="@string/string_initialize_the_repository"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtInventory"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_16dp"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_8dp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_8dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edtOrInvent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/string_original_inventory"
                            android:textSize="17sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_8dp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_8dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edtCostPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/string_cost_price"
                            android:textSize="17sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>